# lazuli

./: .gitignore  ChangeLog.md  Makefile  README.md  Setup.hs  convert.py  lazuli.cabal  leadbeater.cabal  mk_bench.py  package.yaml  stack.yaml  train_toy.py
benchmarks/: lazuli.csv  lazuli.json  lazuli.md
models/: AND_Gate_2_Sigmoid_1.hs  Fashion_MNIST_784_ReLU_128_Softmax_10.hs  Fashion_MNIST_PCA_100_ReLU_64_Softmax_10.hs  Moons_2_ReLU_10_ReLU_10_Softmax_2.hs  SwissRolls_3_ReLU_10_ReLU_10_Softmax_2.hs
src/Lazuli/: LinearAlgebra.hs  Network.hs  Prelude.hs
src/Lazuli/LinearAlgebra/: Internal.hs
src/Leadbeater/: LinearAlgebra.hs  Network.hs  Prelude.hs
src/Leadbeater/Core/: Layer.hs  Network.hs
src/Leadbeater/Layer/: FullyConnected.hs
src/Leadbeater/Layers/: FullyConnected.hs
src/Leadbeater/LinearAlgebra/: Internal.hs
src/Numeric/: LinearAlgebra.hs
src/Numeric/LinearAlgebra/: Internal.hs
test/: perceptron.hs
