name:                      lazuli
version:                   0.1.0.0
description:               Please see the README on GitHub at <https://github.com/wenkokke/lazuli#readme>
homepage:                  https://github.com/wenkokke/lazuli#readme
bug-reports:               https://github.com/wenkokke/lazuli/issues
author:                    Wen Kokke
maintainer:                wen.kokke@gmail.com
copyright:                 2020 Wen Kokke
license:                   OtherLicense
license-file:              LICENSE
cabal-version:             1.12
extra-source-files:        README.md
                         , ChangeLog.md
build-type:                Custom

custom-setup
  setup-depends:           base >=4.7 && <5.0
                         , Cabal >=2.4 && <2.5
                         , liquidhaskell-cabal >=0.2 && <0.3

flag liquidhaskell
  description:             After building, verify with LiquidHaskell
  default:                 False

library
  exposed-modules:         Lazuli.Network
                         , Lazuli.LinearAlgebra
                         , Lazuli.LinearAlgebra.Internal
                         , Lazuli.Prelude
  other-modules:           Paths_lazuli
  build-depends:           base >=4.7 && <5.0
                         , liquidhaskell-cabal >=0.2 && <0.3
  hs-source-dirs:          src
  default-language:        Haskell2010
  ghc-options:             -Wall -fno-warn-unused-matches
  x-liquidhaskell-options: --reflection
  x-liquidhaskell-options: --ple
  x-liquidhaskell-verify:  src/Lazuli/Network.hs
  x-liquidhaskell-verify:  src/Lazuli/LinearAlgebra.hs
  x-liquidhaskell-verify:  src/Lazuli/LinearAlgebra/Internal.hs
  x-liquidhaskell-verify:  src/Lazuli/Prelude.hs

test-suite perceptron
  type:                    exitcode-stdio-1.0
  main-is:                 models/AND_Gate_2_Sigmoid_1.hs
  build-depends:           base >=4.7 && <5.0
                         , liquidhaskell-cabal >=0.2 && <0.3
                         , lazuli ==0.1.0.0
  default-language:        Haskell2010
  ghc-options:             -Wall -fno-warn-unused-matches
  x-liquidhaskell-options: --reflection
  x-liquidhaskell-options: --ple
  x-liquidhaskell-verify:  models/AND_Gate_2_Sigmoid_1.hs
                         , models/Moons_2_ReLU_10_ReLU_10_Softmax_2.hs
                         , models/SwissRolls_3_ReLU_10_ReLU_10_Softmax_2.hs

source-repository head
  type:                    git
  location:                https://github.com/wenkokke/lazuli
